cursive-bootstrap/tests/ui/E-TYP/E-TYP-1923.cursive
// RUN: compile-fail
// DIAG: E-TYP-1923
// SPEC: 5.10
// DESC: Duplicate enum discriminant value

enum Status {
    Active = 1
    Inactive = 1  //~ ERROR E-TYP-1923: duplicate discriminant
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
